HDL ANT Deployment Package/retrieveUnpackaged/objects/Saleshdl__c.object
<CustomObject>
    <fields>
        <fullName>Acct__c</fullName>
        <label>Acct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Practice__c</fullName>
        <label>Practice</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceivedDate__c</fullName>
        <label>ReceivedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Samples__c</fullName>
        <label>Samples</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Saleshdl</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SalesHDL Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Saleshdls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>